--- a/assets/reset.css
+++ b/assets/reset.css
@@ -4,13 +4,19 @@ div:nth-child(2) {
 	position: fixed;
 	top: 100px;
 	width: 12%;
+	z-index: 1;
 }
 div {
     /* background-color: lightgrey;
 	border: solid black 1px; */
     padding: 10px;
 }
+.image-container{
+	position: relative;
+	max-width: 80%;
+}
 img{
     width: 300px;
     height: 300px;
+	max-width: 100%;
 }
