--- a/assets/reset.css
+++ b/assets/reset.css
@@ -13,7 +13,7 @@ h1 {
 	padding: 20px;
 	margin: 0px;
   }
-div:nth-child(2) {
+.toc{
 	border-style: solid;
 	border-width: 4px;
 	position: fixed;
@@ -38,10 +38,55 @@ aside {
 	margin-right: 10px;
 }
 
-p {
-	width: 50%;
-	display: inline-block;
-	text-align: left;
-	white-space: pre;
-	margin: auto;
+.slide_wrapper {
+	position: relative;
+	padding: 0;
+	width: 880px;
+	margin: 0 auto;
+	margin-top: 50px;
+	height: 500px;
+	overflow: hidden;
+	border: purple solid 5px;
+}
+
+.slides {
+	position: absolute;
+	left:0px; top:auto; bottom:auto;
+	transition: left 0.5s ease-out;
+}
+
+li{
+	list-style: none;
+}
+.slides li:first-child{
+	float: left;
+	margin-left: 40px;
+}
+.slides li:not(:last-child){
+	float: left;
+	margin-right: 40px;
+}
+.slides img{
+	width: 800px;
+	height: 500px;
+}
+
+.controls{
+	text-align: center;
+	margin-top: 50px;
+}
+
+.controls span{
+	background: #333;
+	color: #fff;
+	padding: 10px 20px;
+	margin: 0 10px;
+}
+
+#desc_heading{
+	margin: 0;
+	padding: 0;
+	background-color: transparent;
+	font-size: xx-large;
+	margin-bottom: 10px;
 }
