--- a/assets/reset.css
+++ b/assets/reset.css
@@ -45,7 +45,7 @@ aside {
 	margin: 0 auto;
 	margin-top: 50px;
 	height: 500px;
-	overflow: visible;
+	overflow: hidden;
 	border: purple solid 5px;
 }
 
